--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@tamagui/config": "^1.74.5",
+    "@tamagui/theme-builder": "^1.74.5",
     "react": "18.1.0",
     "react-native": "0.70.13",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "tamagui": "^1.74.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
