--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native-stack": "^6.9.14",
     "@tamagui/config": "^1.74.5",
     "@tamagui/theme-builder": "^1.74.5",
+    "axios": "^1.5.1",
     "react": "18.1.0",
     "react-native": "0.70.13",
+    "react-native-image-picker": "^7.0.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "tamagui": "^1.74.5"
