--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tamagui/theme-builder": "^1.74.5",
     "react": "18.1.0",
     "react-native": "0.70.13",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
