--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.70.13",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
+    "react-native-image-picker": "^7.0.2",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
