--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pocketbase": "^0.18.0",
     "react": "18.1.0",
     "react-native": "0.70.13",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
     "react-native-image-picker": "^7.0.2",
